Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-25807

ARM build failure due to missing ISB instruction on ARMv6

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.5.10
    • 10.5.11
    • Compiling
    • None

    Description

      The problem was introduced by MDEV-24630.

      Compilation fails with:

      selected processor doesn't support 'ISB' in ARM mode.
      

      If the processor is ARMv6, it doesn't support isb instruction, as per the documentation here:
      https://www.keil.com/support/man/docs/armasm/armasm_dom1361289871865.htm

      The proper fix is to detect if the current compiling processor supports the inline assembly and only then activate the performance optimization feature.

      Attachments

        Issue Links

          Activity

            People

              danblack Daniel Black
              cvicentiu Vicențiu Ciorbaru
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.